--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>João Silva - Desenvolvedor Full Stack & Designer</title>
-    <meta name="description" content="Portfolio profissional de João Silva, desenvolvedor full stack especializado em React, Node.js e design UI/UX. Criando experiências digitais memoráveis." />
-    <meta name="author" content="João Silva" />
-    <meta name="keywords" content="desenvolvedor, full stack, react, nodejs, design, ui/ux, portfolio, freelancer" />
+    <title>EDUARDO A SAMPAIO</title>
+    <meta name="description" content="Advogado." />
+    <meta name="author" content="Eduardo A Sampaio" />
+    <meta name="keywords" content="advogado, empresa, tributo" />
 
-    <meta property="og:title" content="João Silva - Desenvolvedor Full Stack & Designer" />
-    <meta property="og:description" content="Portfolio profissional de João Silva, desenvolvedor full stack especializado em React, Node.js e design UI/UX." />
+    <meta property="og:title" content="Eduardo A Sampaio" />
+    <meta property="og:description" content="Advogado." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="João Silva - Desenvolvedor Full Stack" />
-    <meta name="twitter:description" content="Portfolio profissional com projetos de desenvolvimento web e design." />
+    <meta name="twitter:title" content="Eduardo A Sampaio" />
+    <meta name="twitter:description" content="Advogado" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-    <link rel="canonical" href="https://joaosilva.dev" />
+    <link rel="canonical" href="https://OneIdeaOneCoffee.org" />
   </head>
 
   <body>
