--- a/index.html
+++ b/index.html
@@ -1,24 +1,19 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>João Silva - Desenvolvedor Full Stack & Designer</title>
-    <meta name="description" content="Portfolio profissional de João Silva, desenvolvedor full stack especializado em React, Node.js e design UI/UX. Criando experiências digitais memoráveis." />
-    <meta name="author" content="João Silva" />
-    <meta name="keywords" content="desenvolvedor, full stack, react, nodejs, design, ui/ux, portfolio, freelancer" />
+    <title>Consultoria Jurídica</title>
+    <meta name="description" content="Website institucional de Consultoria Jurídica. Assessoria legal de qualidade para empresas e pessoas físicas." />
+    <meta name="author" content="Consultoria Jurídica" />
+    <meta name="keywords" content="consultoria jurídica, advocacia, serviços jurídicos, escritório de advocacia, assessoria legal" />
 
-    <meta property="og:title" content="João Silva - Desenvolvedor Full Stack & Designer" />
-    <meta property="og:description" content="Portfolio profissional de João Silva, desenvolvedor full stack especializado em React, Node.js e design UI/UX." />
+    <meta property="og:title" content="Consultoria Jurídica" />
+    <meta property="og:description" content="Assessoria jurídica personalizada e soluções legais para diferentes necessidades." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://seusite.com/imagens/og-image.png" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="João Silva - Desenvolvedor Full Stack" />
-    <meta name="twitter:description" content="Portfolio profissional com projetos de desenvolvimento web e design." />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <link rel="canonical" href="https://joaosilva.dev" />
+    <link rel="canonical" href="https://seusite.com" />
   </head>
 
   <body>
