--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Consultoria Jurídica</title>
-    <meta name="description" content="Sampaio - Consultoria Jurídica Corporativa. Assessoria jurídica de excelência para operações corporativas complexas e clientes institucionais." />
-    <meta name="author" content="Sampaio Consultoria Jurídica" />
-    <meta name="keywords" content="consultoria jurídica corporativa, direito societário, fusões aquisições, compliance, governança corporativa" />
+    <meta name="description" content="Consultoria Jurídica Corporativa. Assessoria jurídica de excelência para operações empresariais complexas e clientes institucionais." />
+    <meta name="author" content="Consultoria Jurídica" />
+    <meta name="keywords" content="consultoria jurídica, direito societário, compliance" />
 
-    <meta property="og:title" content="Sampaio - Consultoria Jurídica Corporativa" />
-    <meta property="og:description" content="Assessoria jurídica de excelência para operações corporativas complexas e clientes institucionais." />
+    <meta property="og:title" content="Consultoria Jurídica" />
+    <meta property="og:description" content="Assessoria jurídica de excelência para empreendedores e empresas." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://seusite.com/imagens/og-image.png" />
 
